<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:textStyle="bold"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/setting_theme_switch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/theme_dark_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/image_quality"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/sp_img_quality_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_image_quality"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/sp_profile_img_quality_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_save_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/save"/>

                <Button
                    android:id="@+id/bt_cancel_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/cancel"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>