<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.3"
            android:background="@color/grey_night"
            android:contentDescription="@string/download_image"
            android:elevation="12dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.UserImageViewRoundCorner" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:alpha="0.3"
            android:background="@color/grey_night"
            android:contentDescription="@string/favourite_image"
            android:elevation="12dp"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.UserImageViewRoundCorner" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shimmer_main_iv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/images_list"
            android:elevation="10dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ImageViewRoundCorner" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:elevation="12dp"
            android:layout_marginHorizontal="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:alpha="0.3"
            android:background="@color/grey_light"
            app:layout_constraintBottom_toBottomOf="@+id/shimmer_main_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="placeholder">

        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>