<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivDownloadImageItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.5"
            android:background="@color/black"
            android:contentDescription="@string/download_image"
            android:elevation="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.UserImageViewRoundCorner" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivFavouriteImageItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:background="@color/black"
            android:contentDescription="@string/favourite_image"
            android:elevation="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.UserImageViewRoundCorner" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMainImagesItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivMainImagesItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:contentDescription="@string/images_list"
                android:elevation="10dp"
                android:minWidth="660dp"
                android:minHeight="600dp"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/cvMainImagesItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivUserImagesItem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="0dp"
                android:contentDescription="@string/images_list"
                android:elevation="20dp"
                android:scaleType="fitXY"
                android:shadowColor="@color/black"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.UserImageViewRoundCorner"
                app:strokeColor="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/ivUserImagesItem"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvUsernameImagesItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:shadowColor="@color/black"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUnsplashImagesItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:shadowColor="@color/black"
                        android:text="@string/unsplash"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvBioImagesItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:shadowColor="@color/black"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>