<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/images_list"
                android:elevation="10dp"
                android:background="@color/background"
                android:shadowColor="@color/black"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.UserImageViewRoundCorner" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:background="@color/background"
                    android:shadowColor="@color/black"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:background="@color/background"
                    android:shadowColor="@color/black"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:adjustViewBounds="true"
                    android:background="@color/background"
                    android:contentDescription="@string/images_list"
                    android:elevation="10dp"
                    android:scaleType="fitXY" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:alpha="0.5"
                        android:background="@color/background"
                        android:contentDescription="@string/favourite_image"
                        android:elevation="10dp"
                        android:scaleType="centerInside"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.UserImageViewRoundCorner" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:alpha="0.5"
                        android:background="@color/background"
                        android:contentDescription="@string/download_image"
                        android:elevation="10dp"
                        android:scaleType="centerInside"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.UserImageViewRoundCorner" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:background="@color/background"
                    android:shadowColor="@color/black"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>
</LinearLayout>